// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compose hooks composes inline hooks 1`] = `
{
  "entrypoints": [
    {
      "endpoints": [
        {
          "actions": [
            {
              "alias": "org",
              "changeset": [
                {
                  "name": "name",
                  "setter": {
                    "args": [],
                    "code": {
                      "inline": ""test name"",
                      "kind": "inline",
                    },
                    "kind": "fieldset-hook",
                  },
                },
              ],
              "kind": "create-one",
              "model": "Org",
              "select": [],
              "targetPath": [
                "org",
              ],
            },
          ],
          "authSelect": [],
          "authorize": undefined,
          "fieldset": {
            "kind": "record",
            "nullable": false,
            "record": {},
          },
          "kind": "create",
          "parentContext": [],
          "response": [
            {
              "alias": "id",
              "kind": "field",
              "name": "id",
              "namePath": [
                "Org",
                "id",
              ],
              "refKey": "Org.id",
            },
            {
              "alias": "name",
              "kind": "field",
              "name": "name",
              "namePath": [
                "Org",
                "name",
              ],
              "refKey": "Org.name",
            },
          ],
          "target": {
            "alias": "org",
            "kind": "model",
            "name": "Org",
            "namePath": [
              "Org",
            ],
            "refKey": "Org",
            "retType": "Org",
            "select": [],
          },
        },
      ],
      "entrypoints": [],
      "name": "Orgs",
      "target": {
        "alias": "org",
        "identifyWith": {
          "name": "id",
          "paramName": "org_id",
          "refKey": "Org.id",
          "type": "integer",
        },
        "kind": "model",
        "name": "Org",
        "namePath": [
          "Org",
        ],
        "refKey": "Org",
        "retType": "Org",
      },
    },
  ],
  "models": [
    {
      "aggregates": [],
      "computeds": [],
      "dbname": "org",
      "fields": [
        {
          "dbname": "id",
          "dbtype": "serial",
          "kind": "field",
          "modelRefKey": "Org",
          "name": "id",
          "nullable": false,
          "primary": true,
          "refKey": "Org.id",
          "type": "integer",
          "unique": true,
          "validators": [],
        },
        {
          "dbname": "name",
          "dbtype": "text",
          "kind": "field",
          "modelRefKey": "Org",
          "name": "name",
          "nullable": false,
          "primary": false,
          "refKey": "Org.name",
          "type": "text",
          "unique": false,
          "validators": [
            {
              "arg": "name",
              "code": {
                "inline": ""test name"",
                "kind": "inline",
              },
              "name": "hook",
            },
          ],
        },
      ],
      "hooks": [
        {
          "args": [],
          "code": {
            "inline": ""some description"",
            "kind": "inline",
          },
          "kind": "model-hook",
          "name": "description",
          "refKey": "Org.description",
        },
      ],
      "kind": "model",
      "name": "Org",
      "queries": [],
      "refKey": "Org",
      "references": [],
      "relations": [],
    },
  ],
  "populators": [],
  "resolveOrder": [
    "Org",
    "Org.name",
    "Org.description",
  ],
  "runtimes": [
    {
      "default": true,
      "name": "MyRuntime",
      "sourcePath": ""some/path/to/file"",
      "type": "node",
    },
    {
      "default": false,
      "name": "$GAUDI_INTERNAL",
      "sourcePath": "/home/hkasabasic/work/workspaces/gaudi/gaudi/src/composer/hooks",
      "type": "node",
    },
  ],
}
`;

exports[`compose hooks composes source hooks 1`] = `
{
  "entrypoints": [
    {
      "endpoints": [
        {
          "actions": [
            {
              "alias": "org",
              "changeset": [
                {
                  "name": "name",
                  "setter": {
                    "args": [],
                    "code": {
                      "file": "hooks.js",
                      "kind": "source",
                      "runtimeName": "MyRuntime",
                      "target": "someHook",
                    },
                    "kind": "fieldset-hook",
                  },
                },
              ],
              "kind": "create-one",
              "model": "Org",
              "select": [],
              "targetPath": [
                "org",
              ],
            },
          ],
          "authSelect": [],
          "authorize": undefined,
          "fieldset": {
            "kind": "record",
            "nullable": false,
            "record": {},
          },
          "kind": "create",
          "parentContext": [],
          "response": [
            {
              "alias": "id",
              "kind": "field",
              "name": "id",
              "namePath": [
                "Org",
                "id",
              ],
              "refKey": "Org.id",
            },
            {
              "alias": "name",
              "kind": "field",
              "name": "name",
              "namePath": [
                "Org",
                "name",
              ],
              "refKey": "Org.name",
            },
          ],
          "target": {
            "alias": "org",
            "kind": "model",
            "name": "Org",
            "namePath": [
              "Org",
            ],
            "refKey": "Org",
            "retType": "Org",
            "select": [],
          },
        },
      ],
      "entrypoints": [],
      "name": "Orgs",
      "target": {
        "alias": "org",
        "identifyWith": {
          "name": "id",
          "paramName": "org_id",
          "refKey": "Org.id",
          "type": "integer",
        },
        "kind": "model",
        "name": "Org",
        "namePath": [
          "Org",
        ],
        "refKey": "Org",
        "retType": "Org",
      },
    },
  ],
  "models": [
    {
      "aggregates": [],
      "computeds": [],
      "dbname": "org",
      "fields": [
        {
          "dbname": "id",
          "dbtype": "serial",
          "kind": "field",
          "modelRefKey": "Org",
          "name": "id",
          "nullable": false,
          "primary": true,
          "refKey": "Org.id",
          "type": "integer",
          "unique": true,
          "validators": [],
        },
        {
          "dbname": "name",
          "dbtype": "text",
          "kind": "field",
          "modelRefKey": "Org",
          "name": "name",
          "nullable": false,
          "primary": false,
          "refKey": "Org.name",
          "type": "text",
          "unique": false,
          "validators": [
            {
              "arg": "name",
              "code": {
                "file": "githubc.js",
                "kind": "source",
                "runtimeName": "MyRuntime",
                "target": "someHook",
              },
              "name": "hook",
            },
          ],
        },
      ],
      "hooks": [
        {
          "args": [],
          "code": {
            "file": "githubc.js",
            "kind": "source",
            "runtimeName": "MyRuntime",
            "target": "someHook",
          },
          "kind": "model-hook",
          "name": "description",
          "refKey": "Org.description",
        },
      ],
      "kind": "model",
      "name": "Org",
      "queries": [],
      "refKey": "Org",
      "references": [],
      "relations": [],
    },
  ],
  "populators": [],
  "resolveOrder": [
    "Org",
    "Org.name",
    "Org.description",
  ],
  "runtimes": [
    {
      "default": true,
      "name": "MyRuntime",
      "sourcePath": ""some/path/to/file"",
      "type": "node",
    },
    {
      "default": false,
      "name": "$GAUDI_INTERNAL",
      "sourcePath": "/home/hkasabasic/work/workspaces/gaudi/gaudi/src/composer/hooks",
      "type": "node",
    },
  ],
}
`;

exports[`compose hooks defaults to the first execution runtime when hook runtime is empty 1`] = `
{
  "actions": [
    {
      "alias": "org",
      "changeset": [
        {
          "name": "name",
          "setter": {
            "args": [],
            "code": {
              "file": "hooks.js",
              "kind": "source",
              "runtimeName": undefined,
              "target": "randomSlug",
            },
            "kind": "fieldset-hook",
          },
        },
      ],
      "kind": "create-one",
      "model": "Org",
      "select": [],
      "targetPath": [
        "org",
      ],
    },
  ],
  "authSelect": [],
  "authorize": undefined,
  "fieldset": {
    "kind": "record",
    "nullable": false,
    "record": {},
  },
  "kind": "create",
  "parentContext": [],
  "response": [
    {
      "alias": "id",
      "kind": "field",
      "name": "id",
      "namePath": [
        "Org",
        "id",
      ],
      "refKey": "Org.id",
    },
    {
      "alias": "name",
      "kind": "field",
      "name": "name",
      "namePath": [
        "Org",
        "name",
      ],
      "refKey": "Org.name",
    },
  ],
  "target": {
    "alias": "org",
    "kind": "model",
    "name": "Org",
    "namePath": [
      "Org",
    ],
    "refKey": "Org",
    "retType": "Org",
    "select": [],
  },
}
`;
